# becom-bta-lib

./: .gitignore  BltTofApi.sln  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: codeql.yml  flawfinder.yml  semgrep.yml
cmake/: btaConfig.cmake.in  bta_config.h.in
common/: CMakeLists.txt  bcb_circular_buffer.c  bcb_circular_buffer.h  bitconverter.c  bitconverter.h  bta_byte_queue.c  bta_byte_queue.h  bta_jpg.c  bta_jpg.h  bta_oshelper.c  bta_oshelper.h  bvq_queue.c  bvq_queue.h  cal_dxyz.h  calcXYZ.c  calcXYZ.h  calc_bilateral.c  calc_bilateral.h  circular_buffer.c  circular_buffer.h  crc16.c  crc16.h  crc32.c  crc32.h  crc7.c  crc7.h  fifo.c  fifo.h  memory_area.c  memory_area.h  mth_math.h  opencv_helper.cpp  opencv_helper.h  ping.c  ping.cc  ping.h  pthread_helper.c  pthread_helper.h  sockets_helper.c  sockets_helper.h  (+9 more)
common/fastBF/: fspecial_gauss.c  fspecial_gauss.h  imfilter.c  imfilter.h  maxFilter.c  maxFilter.h  shiftableBF.c  shiftableBF.h
common/lzma/: CpuArch.c  LzFind.c  LzFindMt.c  LzFindOpt.c  LzmaEnc.c  Threads.c
inc/: bta.h  bta_discovery.h  bta_ext.h  bta_flash_update.h  bta_frame.h  bta_status.h
sdk/: BltTofApi.vcxproj  BltTofApi.vcxproj.filters  CMakeLists.txt  Makefile  bta.c  bta_discovery_helper.c  bta_discovery_helper.h  bta_eth.c  bta_eth.h  bta_eth_helper.c  bta_eth_helper.h  bta_frame_queueing.c  bta_frame_queueing.h  bta_grabbing.c  bta_grabbing.h  bta_helper.c  bta_helper.h  bta_p100.c  bta_p100.h  bta_p100_helper.c  bta_p100_helper.h  bta_processing.c  bta_serialization.c  bta_serialization.h  bta_stream.c  bta_stream.h  bta_uart.c  bta_uart.h  bta_uart_helper.c  bta_uart_helper.h  bta_usb.c  bta_usb.h  configuration.h  configure_firewall.bat
sdk/inc/: libusb.h  win_usb.h
